2015-04-02  Renlin Li  <renlin.li@arm.com>

	* config/tc-aarch64.c (mapping_state): Emit MAP_DATA within text section in order.
	(mapping_state_2): Don't emit MAP_DATA here.
	(s_aarch64_inst): Align frag during state transition.
	(md_assemble): Likewise.

2015-04-02  Ed Maste  <emaste@freebsd.org>

	* config/tc-aarch64.c (set_error_kind): Delete.
	(set_error_message): Delete.

2015-04-02  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2015-04-01  Evandro Menezes  <e.menezes@samsung.com>

	* config/tc-aarch64.c: Add support for Samsung Exynos M1.
	* doc/c-aarch64.texi (-mcpu=): Add "exynos-m1".

2015-04-01  Evandro Menezes  <e.menezes@samsung.com>

	* config/tc-arm.c: Add support for Samsung Exynos M1.
	* doc/c-arm.texi (-mcpu=): Add "exynos-m1".

2015-04-01  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2015-03-31  Ed Schouten  <ed@nuxi.nl>

	* configure.tgt (fmt): Set to elf for *-*-cloudabi*.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac: Revert the AM_ZLIB change.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ZLIBINC): New.
	(AM_CFLAGS): Add $(ZLIBINC).
	* as.c: (show_usage): Don't check HAVE_ZLIB_H.
	(parse_args): Likewise.
	* compress-debug.c: Don't check HAVE_ZLIB_H to include <zlib.h>.
	(compress_init): Don't check HAVE_ZLIB_H.
	(compress_data): Likewise.
	(compress_finish): Likewise.
	* configure.ac (AM_ZLIB): Removed.
	(zlibinc): New.  AC_SUBST.
	Add --with-system-zlib.
	* Makefile.in: Regenerated.
	* config.in: Likewise.
	* configure: Likewise.
	* doc/Makefile.in: Likewise.

2015-03-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (cpu_flags_set): Removed.

2015-03-25  Renlin Li  <renlin.li@arm.com>

	* config/tc-aarch64.c (mapping_state): Remove first MAP_DATA emitting
	code.
	(mapping_state_2): Emit first MAP_DATA symbol here.

2015-03-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/18087