@@ -1,3 +1,9 @@
+2015-04-02  Nick Clifton  <nickc@redhat.com>
+
+	PR gas/18189
+	* config/tc-microblaze.c (parse_imm): Use offsetT as the type for
+	min and max parameters.
+
 2015-04-02  Renlin Li  <renlin.li@arm.com>
 
 	* config/tc-aarch64.c (mapping_state): Emit MAP_DATA within text section in order.
